--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
+#[env:nodemcu]
+[env:nodemcuv2]
 platform = espressif8266
-board = nodemcu
+#board = nodemcu
+board = nodemcuv2
 framework = arduino
 upload_speed = 115200
-
-
-lib_deps =
-  PubSubClient@2.6
-
-; Larger buffer is needed for HomeAssistant discovery messages, which are quite large
+monitor_speed = 115200
+lib_deps = 
+	PubSubClient@2.6
 build_flags = -D MQTT_MAX_PACKET_SIZE=1024
+;upload_protocol = espota
+;upload_port = 192.168.1.xxx
+;upload_flags =
+;  --auth=admin
+
+#[env:nodemcuv2]
+#platform = espressif8266
+#board = nodemcuv2
+#framework = arduino
+
